--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,6 +9,11 @@ security:
         main:
             anonymous: lazy
             provider: users_in_memory
+    encoders:
+        App\Entity\Admin:
+            algorithm: auto
+        App\Entity\User:
+            algorithm: auto
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
