--- a/.env
+++ b/.env
@@ -30,3 +30,10 @@ APP_SECRET=484b937ccd86ecaa65b3bc935243cfa6
  DATABASE_URL="mysql://root:@127.0.0.1:3306/parapharmacie?serverVersion=mariadb-10.3.14"
 
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
