--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,19 +1,31 @@
 security:
+    encoders:
+        App\Entity\User:
+            algorithm: 'bcrypt'
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        in_memory: { memory:  }
+        in_database:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
-            provider: users_in_memory
-    encoders:
-        App\Entity\Admin:
-            algorithm: auto
-        App\Entity\User:
-            algorithm: auto
+            anonymous: true
+            provider: in_database
+            form_login:
+                login_path: security_login
+                check_path: security_login
+                default_target_path: routines
+
+            logout:
+                path: security_logout
+                target: security_login
+
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -24,5 +36,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/profile, roles: ROLE_USER }
