--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=484b937ccd86ecaa65b3bc935243cfa6
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
